--- a/content/publication/soler-figueroa_2020/cite.bib
+++ b/content/publication/soler-figueroa_2020/cite.bib
@@ -1,5 +1,5 @@
 @article{Fontaine2020,
- author = {Brenda M. Soler-Figueroaa, Diana N. Fontaine, Katharine J. Carney, Gregory M. Ruiz, Mario N. Tamburri},
+ author = {Soler-Figueroa, B.M. and Fontaine, D.N. and Carney, K.J. and Ruiz, G.M. and Tamburri, M.N.},
  doi = {10.1016/j.marpolbul.2020.111165},
  file = {:Users/fontained/Documents/GSO Research/website/Soler-Figueroa_etal_2020.pdf:pdf},
  journal = {Marine Pollution Bulletin},
