--- a/content/publication/rynearson_etal2020/cite.bib
+++ b/content/publication/rynearson_etal2020/cite.bib
@@ -1,12 +1,17 @@
-@article{Fontaine2020,
-author = {Anderson, S.I. and Barton, A. D. and Clayton, S. and Dutkiewicz, S and Rynearson, T.},
-doi = {10.1038/s41467-021-26651-8},
-file = {:Users/Stephanie/Desktop/GSO Research/Papers/Anderson_et_al-2021-Nature_Communications.pdf:pdf},
-journal = {Nature Communications},
-number = {6413},
-pages = {1--9},
-publisher = {Springer US},
-title = {{Marine phytoplankton functional types exhibit diverse responses to thermal change}},
-volume = {12},
-year = {2021}
+@article{rynearson_metabarcoding_2020,
+	title = {Metabarcoding {Reveals} {Temporal} {Patterns} of {Community} {Composition} and {Realized} {Thermal} {Niches} of {Thalassiosira} {Spp}. ({Bacillariophyceae}) from the {Narragansett} {Bay} {Long}-{Term} {Plankton} {Time} {Series}},
+	volume = {9},
+	issn = {2079-7737},
+	url = {https://www.mdpi.com/2079-7737/9/1/19},
+	doi = {10.3390/biology9010019},
+	abstract = {Diatoms generate nearly half of marine primary production and are comprised of a diverse array of species that are often morphologically cryptic or difficult to identify using light microscopy. Here, species composition and realized thermal niches of species in the diatom genus Thalassiosira were examined at the site of the Narragansett Bay (NBay) Long-Term Plankton Time Series using a combination of light microscopy (LM), high-throughput sequencing (HTS) of the 18S rDNA V4 region and historical records. Thalassiosira species were identified over 6 years using a combination of LM and DNA sequences. Sixteen Thalassiosira taxa were identified using HTS: nine were newly identified in NBay. Several newly identified species have small cell diameters and are difficult to identify using LM. However, they appeared frequently and thus may play a significant ecological role in NBay, particularly since their realized niches suggest they are eurythermal and able to tolerate the {\textgreater}25 °C temperature range of NBay. Four distinct species assemblages that grouped by season were best explained by surface water temperature. When compared to historical records, we found that the cold-water species Thalassiosira nordenskioeldii has decreased in persistence over time, suggesting that increasing surface water temperature has influenced the ecology of phytoplankton in NBay.},
+	language = {en},
+	number = {1},
+	urldate = {2021-12-30},
+	journal = {Biology},
+	author = {Rynearson, Tatiana A. and Flickinger, Sarah A. and Fontaine, Diana N.},
+	month = jan,
+	year = {2020},
+	pages = {19},
+	file = {Full Text:/Users/fontained/Zotero/storage/LUFP3BX2/Rynearson et al. - 2020 - Metabarcoding Reveals Temporal Patterns of Communi.pdf:application/pdf},
 }
