--- a/content/publication/soler-figueroa_2020/cite.bib
+++ b/content/publication/soler-figueroa_2020/cite.bib
@@ -1,12 +1,15 @@
-@article{Fontaine2020,
- author = {Brenda M. Soler-Figueroa and Diana N. Fontaine, Katharine J. Carney, Gregory M. Ruiz, Mario N. Tamburri},
- doi = {10.1016/j.marpolbul.2020.111165},
- file = {:Users/fontained/Documents/GSO Research/website/Soler-Figueroa_etal_2020.pdf:pdf},
- journal = {Marine Pollution Bulletin},
- number = {9},
- pages = {111165},
- title = {Characteristics of global port phytoplankton and implications for current ballast water regulations},
- volume = {155},
- year = {2020}
+@article{soler-figueroa_characteristics_2020,
+	title = {Characteristics of global port phytoplankton and implications for current ballast water regulations},
+	volume = {155},
+	issn = {0025326X},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0025326X20302836},
+	doi = {10.1016/j.marpolbul.2020.111165},
+	language = {en},
+	urldate = {2020-06-22},
+	journal = {Marine Pollution Bulletin},
+	author = {Soler-Figueroa, Brenda M. and Fontaine, Diana N. and Carney, Katharine J. and Ruiz, Gregory M. and Tamburri, Mario N.},
+	month = jun,
+	year = {2020},
+	pages = {111165},
 }
 
