--- a/content/publication/soler-figueroa_2020/cite.bib
+++ b/content/publication/soler-figueroa_2020/cite.bib
@@ -11,5 +11,6 @@
 	month = jun,
 	year = {2020},
 	pages = {111165},
+    file = {Full Text:/Users/fontained/Documents/website/Soler-Figueroa_etal_2020.pdf:application/pdf}
 }
 
